# sick_line_guidance

./: .gitignore  CMakeLists.txt  README.md  package.xml
doc/: copyright.txt  pcan-linux-installation.md  sick_canopen_simu.md  sick_line_guidance_configuration.md
include/sick_line_guidance/: sick_canopen_simu_canstate.h  sick_canopen_simu_compare.h  sick_canopen_simu_device.h  sick_canopen_simu_verify.h  sick_line_guidance_can_cia401_subscriber.h  sick_line_guidance_can_mls_subscriber.h  sick_line_guidance_can_ols_subscriber.h  sick_line_guidance_can_subscriber.h  sick_line_guidance_canopen_chain.h  sick_line_guidance_cloud_converter.h  sick_line_guidance_diagnostic.h  sick_line_guidance_eds_util.h  sick_line_guidance_msg_util.h  sick_line_guidance_version.h
launch/: sick_canopen_simu.launch  sick_line_guidance.launch  sick_line_guidance_can2ros_node.launch  sick_line_guidance_ols20_twin.launch  sick_line_guidance_ros2can_node.launch
mls/: SICK-MLS-MLS.eds  SICK-MLS.eds  sick_line_guidance_mls.yaml
msg/: MLS_Measurement.msg  OLS_Measurement.msg
ols/: SICK-OLS10_CO.eds  SICK_OLS10_CO.eds  SICK_OLS20.eds  SICK_OLS20_CO.eds  sick_line_guidance_ols10.yaml  sick_line_guidance_ols20.yaml  sick_line_guidance_ols20_twin.yaml
src/: sick_canopen_simu_canstate.cpp  sick_canopen_simu_device.cpp  sick_canopen_simu_node.cpp  sick_canopen_simu_verify.cpp  sick_line_guidance_can2ros_node.cpp  sick_line_guidance_can_chain_node.cpp  sick_line_guidance_can_cia401_subscriber.cpp  sick_line_guidance_can_mls_subscriber.cpp  sick_line_guidance_can_ols_subscriber.cpp  sick_line_guidance_can_subscriber.cpp  sick_line_guidance_canopen_chain.cpp  sick_line_guidance_cloud_converter.cpp  sick_line_guidance_cloud_publisher.cpp  sick_line_guidance_diagnostic.cpp  sick_line_guidance_eds_util.cpp  sick_line_guidance_msg_util.cpp  sick_line_guidance_node.cpp  sick_line_guidance_ros2can_node.cpp
test/cfg/: sick_canopen_simu_cfg.xml
test/eds/: CiA401_IO_Node3.eds  CiA401_minimal.eds  CiA402_Stepper_Node8.eds  OLS20_experimental.eds
test/scripts/: cleanup.bash  clion.bash  echo_topics.bash  make.bash  makeall.bash  makepcan.bash  run.bash  runsimu.bash  vs_code.bash
test/yaml/: sick_line_guidance_example.yaml
turtlebotDemo/: README.md
turtlebotDemo/agc_radar/: CMakeLists.txt  package.xml
turtlebotDemo/agc_radar/msg/: agc_radar_msg.msg
turtlebotDemo/agc_radar/src/: agc_radar.cpp  agc_radar_config.cpp
turtlebotDemo/agc_radar/srv/: agc_radar_config.srv
turtlebotDemo/custom_messages/: CMakeLists.txt  package.xml
turtlebotDemo/doc/: backlog.md  build_install.md  demo_map.pptx  faq.md  inbetriebnahme.md  ols_sensor_properties.md  planung_demo.pptx  setup_turtlebot.md
turtlebotDemo/gpio_handling/: CMakeLists.txt  package.xml
turtlebotDemo/gpio_handling/msg/: gpio.msg
turtlebotDemo/gpio_handling/src/: gpio_handler.cpp  gpio_handler.h
turtlebotDemo/gpio_handling/srv/: gpio_get_config.srv  gpio_get_pin.srv  gpio_set_config.srv  gpio_set_pin.srv
turtlebotDemo/lidar_obstacle_detection/: CMakeLists.txt  package.xml
turtlebotDemo/lidar_obstacle_detection/msg/: obstacle_detector_msg.msg
turtlebotDemo/lidar_obstacle_detection/src/: obstacle_detector.cpp  obstacle_detector_config.cpp
turtlebotDemo/lidar_obstacle_detection/srv/: obstacle_detector_config.srv
turtlebotDemo/sick_line_guidance_demo/: CMakeLists.txt  package.xml
turtlebotDemo/sick_line_guidance_demo/include/sick_line_guidance_demo/: adjust_heading.h  barcodes.h  explore_line_state.h  figure_eight_fsm.h  follow_line_state.h  image_util.h  navigation_mapper.h  navigation_util.h  ols_measurement_simulator.h  pid.h  regression_1d.h  robot_fsm.h  robot_fsm_context.h  set_get.h  stop_go_fsm.h  time_format.h  turtlebot_test_fsm.h  velocity_ctr.h  wait_at_barcode_state.h
turtlebotDemo/sick_line_guidance_demo/launch/: Robot_FSM_demo.launch  sick_line_guidance_demo_node.launch  sick_line_guidance_watchdog.launch  turtlebot_test_fsm_node.launch
turtlebotDemo/sick_line_guidance_demo/maps/: cam_intrinsic.xml  demo_barcodes.xml
turtlebotDemo/sick_line_guidance_demo/src/: adjust_heading.cpp  barcodes.cpp  explore_line_state.cpp  figure_eight_fsm.cpp  follow_line_state.cpp  image_util.cpp  navigation_mapper.cpp  navigation_util.cpp  ols_measurement_simulator.cpp  pid.cpp  robot_fsm.cpp  sick_line_guidance_demo_node.cpp  sick_line_guidance_watchdog.cpp  stop_go_fsm.cpp  turtlebot_test_fsm.cpp  turtlebot_test_fsm_node.cpp  velocity_ctr.cpp  wait_at_barcode_state.cpp
turtlebotDemo/sick_line_guidance_demo/yaml/: sick_line_guidance_demo.yaml
turtlebotDemo/test/scripts/: cleanup.bash  clion.bash  gitCloneInstall.bash  killall.bash  make.bash  makeall.bash  makepcan.bash  plotsimu.bash  rungeneric.bash  runsimu.bash  runturtlebot.bash  runturtlebot_olssimu.bash  simu_env.bash  stopturtlebot.bash  testturtlebot.bash
